Fixed Some Alignment Issues

--- a/tp/newfe/src/Styles/Modal.css
+++ b/tp/newfe/src/Styles/Modal.css
@@ -8,13 +8,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 9999;
 }
 
 .modal-content {
-    background: white;
+    background: slategrey;
     padding: 20px;
     border-radius: 5px;
     position: relative;
+    width: 80vw;
+    max-width: 90vw;
+    height: auto;
+    max-height: 80vh;
+    overflow-y: auto;
 }
 
 .modal-close-button {
